Fixed the title background, tried to make the grid responsive but not too big, added animation

--- a/styles.css
+++ b/styles.css
@@ -34,7 +34,7 @@ header {
   padding-bottom: 15%;
   color: white;
   background-color: var(--brand-color);
-  max-width: 100vw;
+  max-width: var(--brand-max-width);
 }
 
 
@@ -94,13 +94,14 @@ p.date {
 /* <!-- Intro --> */
 section{
   padding-top: 10%;
-  max-width: 100vw;
+  max-width: var(--brand-max-width)
+  );
   padding-left: var(--brand-padding-left);
   padding-right: var(--brand-padding-right);
   margin-bottom: 3px;
 }
 .flex-container {
-  display:flex;
+  display: flex;
   align-items: center;
   padding-top: 5%;
   padding-bottom: 5%;
@@ -115,7 +116,7 @@ h2 {
   line-height: 130%;
   padding-bottom: 10%;
 }
-.interviewcontent{
+.interviewcontent {
   line-height: 1.6;
   margin-bottom: 10%;
 }
@@ -215,6 +216,37 @@ em {
 }
 
 
+/* Animation
+.circle {
+  position: absolute;
+  bottom: calc(5rem + 10px); 
+  left: 0;
+  transform: translateY(-50%);
+  margin: 0;
+  padding: 0;
+  width: 5rem;
+  height: 5rem;
+  background-color: #DE639A;
+  border-radius: 50%;
+  animation: movelefttoright 7s linear infinite;
+}
+@keyframes movelefttoright {
+  0% {
+    left: 0;
+  }
+  100% {
+    left: calc(100vw - 50px);
+    }
+  }
+.footer {
+  position: relative;
+  bottom: 0;
+  width: 100%;
+  height: 5rem;
+  padding: 1rem;
+} */
+
+
 /* Footer */
 footer {
   background-color: var(--brand-color);
@@ -241,28 +273,37 @@ footer {
 
 /* larger screen */
 @media only screen and (min-width: 768px) {
+  *{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+  
   #intro {
     margin-left: 30%;
   }
   #content {
     margin-left: 30%;
-    max-width: 50vw;
+    max-width: 55vw;
+    line-height: 1.8;
+    font-size: 1.25rem;
+  }
+  em {
+    font-size: 1.25rem;
   }
   blockquote {
     margin-left: 40%;
   }
   header{
-    margin:0;
+    margin: 0;
   }
   body {
     padding: 20px;
     font-size: 1.2rem;
   }
-  
   h1 {
     font-size: 14rem;
   }
-
   h5 {
     font-size: 13rem;
     padding: 80px;
@@ -284,23 +325,30 @@ footer {
   header p {
     font-size: 1.1rem;
   }
-  .author-item-1,.author-item-2 {
+  .author-item-1,.author-item-2, .last-name {
     font-size: 3.75rem;
     display:block;
   }
-  .last-name {
-    display: block;
-  }
   footer p {
-    font-size: 0.9rem;
+    font-size: 2rem;
 }
-.title{
+.title {
   padding-bottom: 3%;
   padding-top: 1.5%;
-  background-color: transparent;  
+  background-color: white;  
   z-index: 50;
   top: 0;
+  width: 30%;
 }
+.grid-container {
+  margin-left: 30%;
+  margin-right: 30%;
+  padding: 0;
+}
+.grid-item {
+  height: 5.5rem;
+}
+.grid-item-grey {
 }
 
 /* Print Styles */
